<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".alarmClockFragment.createAlarmFragment.CloseCreatingDialogFragment"
    android:padding="5dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_creating_dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        app:layout_constraintStart_toEndOf="@+id/button_discard"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

    <Button
        android:id="@+id/button_discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discard_button"
        app:layout_constraintStart_toEndOf="@+id/button_close"
        app:layout_constraintTop_toBottomOf="@id/dialog_title" />

    <Button
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title" />



</androidx.constraintlayout.widget.ConstraintLayout>
